--- a/styles.css
+++ b/styles.css
@@ -1,99 +1,130 @@
-/* styles.css */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     color: #333;
-    padding: 20px;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-size: 16px;
+    overflow-x: hidden;
+    width: 100%;
+    text-transform: uppercase;
 }
 
-header {
-    text-align: center;
-    margin-bottom: 30px;
+h1{
+    font-size:2em;
+    padding:1em;
+    color:#fefefe;
+    font-family: "Mochiy Pop P One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    flex: 1;
 }
+
+h3{
+    text-transform:uppercase;
+    font-size:25px;
+    box-sizing:boder-box;
+}
+
+h4{
+    margin-top: 36px;
+    font-size: 35px;
+    text-transform:uppercase;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+}
+
+/* Header */
+ header{
+  background: rgb(255,160,122);
+  background: -moz-linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+  background: linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffa07a",endColorstr="#fcb045",GradientType=1);
+  color: #fefefe;
+  text-align: center; 
+ width: 100%;
+ display: flex;
+  justify-content: center;
+  height: 15em;
+  margin-bottom: 3em; 
+  }
+  
+  header p {
+      color:#fefefe;
+  }
+  
 
 header h1 {
-    font-size: 2.5em;
-    color: #4CAF50;
+    font-size: 2em;
+    color: #fefefe;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    width:100%;
+    box-sizing: border-box;
+    margin-top: 1em;
 }
 
 section {
-    margin-bottom: 40px;
+    margin-bottom: 4em;
+    width: 90%;
+    display: block;
+    margin: auto;
 }
 
 section h2 {
     font-size: 2em;
     color: #333;
-    margin-bottom: 10px;
+    margin-bottom: 0.8em;
+    text-transform: uppercase;
 }
 
 ul {
     list-style-type: none;
+    padding:20px;
 }
 
 ul li {
-    background-color: #fff;
-    padding: 15px;
-    margin: 10px 0;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
+    background-color: #fefefe;
+    padding: 1em;
+    margin: 1em 0;
+    border-radius: 0.5em;
+    box-shadow: 0 0 0.5em #eee;
+    border-bottom: 0.1em rgb(255,160,122) solid;
+    animation-duration: 3s;
 
-ul li h3 {
-    font-size: 1.5em;
-    color: #4CAF50;
 }
+ li:hover{
+    box-shadow: 0 0 0.5em #555;
+ }
 
+ li:focus{
+    box-shadow: 0 0 0.5em #555;
+ }
 ul li p {
     font-size: 1em;
-    color: #666;
+    color: #333;
 }
 
 footer {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 3em;
     font-size: 0.9em;
-}
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-}
-
-form {
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-form div {
-    margin-bottom: 10px;
-}
-
-label {
-    display: block;
-    font-weight: bold;
-}
-
-input, textarea, select, button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-button {
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
+    background: rgb(255,160,122);
+    background: -moz-linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+    background: linear-gradient(90deg, rgba(255,160,122,1) 0%, rgba(255,127,80,1) 30%, rgba(255,99,71,1) 44%, rgba(255,69,0,1) 55%, rgba(255,140,0,1) 73%, rgba(255,165,0,1) 82%, rgba(252,176,69,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffa07a",endColorstr="#fcb045",GradientType=1);
+    color: #fefefe;
+    text-align: center;
+    padding:20px;
+    max-width: 100%;
 }
